2008-11-25 Added rcParam axes.unicode_minus which allows plain hypen
           for minus when False - JDH

2008-11-25 Added scatterpoints support in Legend. patch by Erik
           Tollerud - JJL

2008-11-24 Fix crash in log ticking. - MGD

2008-11-20 Added static helper method BrokenHBarCollection.span_where
           and Axes/pyplot method fill_between.  See
           examples/pylab/fill_between.py - JDH

2008-11-12 Add x_isdata and y_isdata attributes to Artist instances,
           and use them to determine whether either or both
           coordinates are used when updating dataLim.  This is
           used to fix autoscaling problems that had been triggered
           by axhline, axhspan, axvline, axvspan. - EF

2008-11-11 Update the psd(), csd(), cohere(), and specgram() methods
           of Axes and the csd() cohere(), and specgram() functions
           in mlab to be in sync with the changes to psd().
           In fact, under the hood, these all call the same core
           to do computations. - RM

2008-11-11 Add 'pad_to' and 'sides' parameters to mlab.psd() to
           allow controlling of zero padding and returning of
           negative frequency components, respecitively.  These are
           added in a way that does not change the API. - RM

2008-11-10 Fix handling of c kwarg by scatter; generalize
           is_string_like to accept numpy and numpy.ma string
           array scalars. - RM and EF

2008-11-09 Fix a possible EINTR problem in dviread, which might help
           when saving pdf files from the qt backend. - JKS

2008-11-05 Fix bug with zoom to rectangle and twin axes - MGD

2008-10-24 Added Jae Joon's fancy arrow, box and annotation
           enhancements -- see
           examples/pylab_examples/annotation_demo2.py

2008-10-23 Autoscaling is now supported with shared axes - EF

2008-10-23 Fixed exception in dviread that happened with Minion - JKS

2008-10-21 set_xlim, ylim now return a copy of the viewlim array to